feat: Implementar sistema de gerenciamento de fila de vídeos
- Adicionado módulo ipc.js para gerenciar eventos do processo principal.
- Implementadas funções para adicionar arquivos à fila, atualizar o progresso e gerenciar estados de processamento (iniciado, concluído, cancelado, erro).
- Criado módulo state.js para centralizar o estado da aplicação, incluindo fila de vídeos, presets e traduções.
- Atualizada a UI para refletir o estado da fila e permitir interação com presets.
- Estilização aprimorada no style.css para uma melhor experiência do usuário.
- Implementadas funções utilitárias em utils.js para manipulação de IDs seguros.

--- a/locales/en.json
+++ b/locales/en.json
@@ -2,7 +2,7 @@
   "appTitle": "W4ll-E",
   "toggleMenu": "Toggle menu",
   "import": "Import",
-  "importFormats": "(mp4, mov, mkv, avi, webm, jpg, jpeg, png)",
+  "importFormats": "(videos, images or folders)",
   "presets": "Presets",
   "manage": "Manage",
   "clientNamePlaceholder": "Client Name",
@@ -16,7 +16,7 @@
   "fullLogTitle": "Full Process Log",
   "managePresetsTitle": "Manage Render Presets",
   "savedPresets": "Saved Presets",
-  "addNewPreset": "Add New Preset",
+  "addNewPreset": "Add Preset",
   "editPreset": "Edit Preset",
   "presetName": "Preset Name",
   "width": "Width (px)",
@@ -27,5 +27,10 @@
   "blackBarSize": "Black Bar Size (px)",
   "delete": "Delete",
   "savePreset": "Save Preset",
-  "checkForUpdates": "Check for Updates"
+  "checkForUpdates": "Check for Updates",
+  "settings": "Settings",
+  "language": "Language",
+  "portuguese": "Portuguese",
+  "english": "English",
+  "spanish": "Spanish"
 }
