--- a/locales/es.json
+++ b/locales/es.json
@@ -2,8 +2,8 @@
   "appTitle": "W4ll-E",
   "toggleMenu": "Alternar menú",
   "import": "Importar",
-  "importFormats": "(mp4, mov, mkv, avi, webm, jpg, jpeg, png)",
-  "presets": "Presets",
+  "importFormats": "(vídeos, imágenes o carpetas)",
+  "presets": "Preajustes",
   "manage": "Gestionar",
   "clientNamePlaceholder": "Nombre del Cliente",
   "emptyQueue": "Cola vacía",
@@ -14,11 +14,11 @@
   "cancel": "Cancelar",
   "startQueue": "Iniciar Cola",
   "fullLogTitle": "Log Completo del Proceso",
-  "managePresetsTitle": "Gestionar Presets de Renderizado",
-  "savedPresets": "Presets Guardados",
-  "addNewPreset": "Añadir Preset",
-  "editPreset": "Editar Preset",
-  "presetName": "Nombre del Preset",
+  "managePresetsTitle": "Gestionar Preajustes de Renderizado",
+  "savedPresets": "Preajustes Guardados",
+  "addNewPreset": "Añadir Preajuste",
+  "editPreset": "Editar Preajuste",
+  "presetName": "Nombre del Preajuste",
   "width": "Ancho (px)",
   "height": "Alto (px)",
   "duration": "Duración (s)",
@@ -26,6 +26,11 @@
   "keepAspectRatio": "Mantener Proporción (Letterbox)",
   "blackBarSize": "Tamaño de la Barra Negra (px)",
   "delete": "Eliminar",
-  "savePreset": "Guardar Preset",
-  "checkForUpdates": "Buscar Actualizaciones"
+  "savePreset": "Guardar Preajuste",
+  "checkForUpdates": "Buscar Actualizaciones",
+  "settings": "Configuración",
+  "language": "Idioma",
+  "portuguese": "Portugués",
+  "english": "Inglés",
+  "spanish": "Español"
 }
