feat: Implement video preset compatibility checks
- Added `isPresetCompatible` function to validate if a video preset is compatible with given video information based on aspect ratio and duration.
- Introduced unit tests for `isPresetCompatible` covering various scenarios including exact matches, tolerance checks, and handling of original video duration.
- Updated UI logic to reflect changes in preset availability based on compatibility with videos in the queue.
- Refactored UI update functions to improve maintainability and clarity.

--- a/locales/en.json
+++ b/locales/en.json
@@ -14,9 +14,9 @@
   "cancel": "Cancel",
   "startQueue": "Start Queue",
   "fullLogTitle": "Full Process Log",
-  "managePresetsTitle": "Manage Render Presets",
-  "savedPresets": "Saved Presets",
-  "addNewPreset": "Add Preset",
+  "managePresetsTitle": "Manage Presets",
+  "savedPresets": "Presets",
+  "addNewPreset": "Add New",
   "editPreset": "Edit Preset",
   "presetName": "Preset Name",
   "width": "Width (px)",
@@ -32,5 +32,43 @@
   "language": "Language",
   "portuguese": "Portuguese",
   "english": "English",
-  "spanish": "Spanish"
+  "spanish": "Spanish",
+  "importBtn": "Import",
+  "exportBtn": "Export",
+  "resolution": "Resolution",
+  "readingInfo": "Reading info...",
+  "errorReadingFile": "File read error",
+  "dragToReorder": "Drag to reorder",
+  "deleteFromQueue": "Delete from queue",
+  "statusCompleted": "Completed",
+  "statusError": "Render error. Click to see log.",
+  "presetIncompatible": "Incompatible with any video in the queue.",
+  "errorLoadingTooltip": "Failed to read file. It may be corrupt.",
+  "confirmDeleteTitle": "Confirm Deletion",
+  "confirmDeletePreset": "Are you sure you want to delete this preset? This action cannot be undone.",
+  "errorTitle": "Error",
+  "presetNameEmpty": "The preset name cannot be empty.",
+  "importErrorTitle": "Import Error",
+  "importErrorInvalidFile": "The selected file is not a valid presets JSON file.",
+  "importCancelled": "Import cancelled by user.",
+  "exportErrorTitle": "Export Error",
+  "exportError": "An error occurred while saving the presets file.",
+  "exportCancelled": "Export cancelled by user.",
+  "updateAvailable": "A new version of W4ll-E is available and will be downloaded in the background.",
+  "updateReady": "The new version is ready to be installed.",
+  "restart": "Restart Now",
+  "later": "Later",
+  "encoderSettings": "Encoder Settings",
+  "encoderPreset": "Encoder Preset",
+  "qualityFactor": "Quality Factor (CRF)",
+  "crfTooltip": "Lower = Better Quality, Larger File. 18-28 is a good range.",
+  "presetUltrafast": "Ultrafast",
+  "presetSuperfast": "Superfast",
+  "presetVeryfast": "Veryfast",
+  "presetFaster": "Faster",
+  "presetFast": "Fast",
+  "presetMedium": "Medium (Default)",
+  "presetSlow": "Slow",
+  "presetSlower": "Slower",
+  "presetVeryslow": "Veryslow"
 }
