--- a/locales/es.json
+++ b/locales/es.json
@@ -5,7 +5,7 @@
   "importFormats": "(vídeos, imágenes o carpetas)",
   "presets": "Preajustes",
   "manage": "Gestionar",
-  "clientNamePlaceholder": "Nombre del Cliente",
+  "clientNamePlaceholder": "Nombre del",
   "emptyQueue": "Cola vacía",
   "clearQueue": "Limpiar Cola",
   "viewLog": "Ver Log",
@@ -14,9 +14,9 @@
   "cancel": "Cancelar",
   "startQueue": "Iniciar Cola",
   "fullLogTitle": "Log Completo del Proceso",
-  "managePresetsTitle": "Gestionar Preajustes de Renderizado",
-  "savedPresets": "Preajustes Guardados",
-  "addNewPreset": "Añadir Preajuste",
+  "managePresetsTitle": "Gestionar Preajustes",
+  "savedPresets": "Preajustes",
+  "addNewPreset": "Añadir Nuevo",
   "editPreset": "Editar Preajuste",
   "presetName": "Nombre del Preajuste",
   "width": "Ancho (px)",
@@ -32,5 +32,43 @@
   "language": "Idioma",
   "portuguese": "Portugués",
   "english": "Inglés",
-  "spanish": "Español"
+  "spanish": "Español",
+  "importBtn": "Importar",
+  "exportBtn": "Exportar",
+  "resolution": "Resolución",
+  "readingInfo": "Leyendo información...",
+  "errorReadingFile": "Error de lectura",
+  "dragToReorder": "Arrastrar para reordenar",
+  "deleteFromQueue": "Eliminar de la cola",
+  "statusCompleted": "Completado",
+  "statusError": "Error de renderizado. Clic para ver el log.",
+  "presetIncompatible": "Incompatible con cualquier vídeo de la cola.",
+  "errorLoadingTooltip": "Fallo al leer el archivo. Puede estar corrupto.",
+  "confirmDeleteTitle": "Confirmar Eliminación",
+  "confirmDeletePreset": "¿Estás seguro de que quieres eliminar este preajuste? Esta acción no se puede deshacer.",
+  "errorTitle": "Error",
+  "presetNameEmpty": "El nombre del preajuste no puede estar vacío.",
+  "importErrorTitle": "Error de Importación",
+  "importErrorInvalidFile": "El archivo seleccionado no es un JSON de preajustes válido.",
+  "importCancelled": "Importación cancelada por el usuario.",
+  "exportErrorTitle": "Error de Exportación",
+  "exportError": "Ocurrió un error al guardar el archivo de preajustes.",
+  "exportCancelled": "Exportación cancelada por el usuario.",
+  "updateAvailable": "Una nueva versión de W4ll-E está disponible y se descargará en segundo plano.",
+  "updateReady": "La nueva versión está lista para ser instalada.",
+  "restart": "Reiniciar Ahora",
+  "later": "Más Tarde",
+  "encoderSettings": "Ajustes de Codificación",
+  "encoderPreset": "Preajuste de Codificación",
+  "qualityFactor": "Factor de Calidad (CRF)",
+  "crfTooltip": "Menor = Mejor Calidad, Archivo Más Grande. 18-28 es un buen rango.",
+  "presetUltrafast": "Ultrarrápido",
+  "presetSuperfast": "Superrápido",
+  "presetVeryfast": "Muy Rápido",
+  "presetFaster": "Más Rápido",
+  "presetFast": "Rápido",
+  "presetMedium": "Medio (Predeterminado)",
+  "presetSlow": "Lento",
+  "presetSlower": "Más Lento",
+  "presetVeryslow": "Muy Lento"
 }
