--- a/locales/pt.json
+++ b/locales/pt.json
@@ -14,9 +14,9 @@
   "cancel": "Cancelar",
   "startQueue": "Iniciar Fila",
   "fullLogTitle": "Log Completo do Processo",
-  "managePresetsTitle": "Gerir Predefinições de Renderização",
-  "savedPresets": "Predefinições Salvas",
-  "addNewPreset": "Adicionar Predefinição",
+  "managePresetsTitle": "Gerir Predefinições",
+  "savedPresets": "Predefinições",
+  "addNewPreset": "Adicionar Nova",
   "editPreset": "Editar Predefinição",
   "presetName": "Nome da Predefinição",
   "width": "Largura (px)",
@@ -32,5 +32,43 @@
   "language": "Idioma",
   "portuguese": "Português",
   "english": "Inglês",
-  "spanish": "Espanhol"
+  "spanish": "Espanhol",
+  "importBtn": "Importar",
+  "exportBtn": "Exportar",
+  "resolution": "Resolução",
+  "readingInfo": "Lendo informações...",
+  "errorReadingFile": "Erro na leitura",
+  "dragToReorder": "Arrastar para reordenar",
+  "deleteFromQueue": "Excluir da fila",
+  "statusCompleted": "Concluído",
+  "statusError": "Erro na renderização. Clique para ver o log.",
+  "presetIncompatible": "Incompatível com qualquer vídeo na fila.",
+  "errorLoadingTooltip": "Falha ao ler o arquivo. Pode estar corrompido.",
+  "confirmDeleteTitle": "Confirmar Exclusão",
+  "confirmDeletePreset": "Tem certeza que deseja excluir esta predefinição? Esta ação não pode ser desfeita.",
+  "errorTitle": "Erro",
+  "presetNameEmpty": "O nome da predefinição não pode estar vazio.",
+  "importErrorTitle": "Erro na Importação",
+  "importErrorInvalidFile": "O arquivo selecionado não é um JSON de predefinições válido.",
+  "importCancelled": "Importação cancelada pelo usuário.",
+  "exportErrorTitle": "Erro na Exportação",
+  "exportError": "Ocorreu uma falha ao salvar o arquivo de predefinições.",
+  "exportCancelled": "Exportação cancelada pelo usuário.",
+  "updateAvailable": "Uma nova versão do W4ll-E está disponível e será baixada em segundo plano.",
+  "updateReady": "A nova versão está pronta para ser instalada.",
+  "restart": "Reiniciar Agora",
+  "later": "Mais Tarde",
+  "encoderSettings": "Configurações de Codificação",
+  "encoderPreset": "Preset de Codificação",
+  "qualityFactor": "Fator de Qualidade (CRF)",
+  "crfTooltip": "Menor = Melhor Qualidade, Maior Arquivo. 18-28 é um bom intervalo.",
+  "presetUltrafast": "Ultra Rápido",
+  "presetSuperfast": "Super Rápido",
+  "presetVeryfast": "Muito Rápido",
+  "presetFaster": "Mais Rápido",
+  "presetFast": "Rápido",
+  "presetMedium": "Médio (Padrão)",
+  "presetSlow": "Lento",
+  "presetSlower": "Mais Lento",
+  "presetVeryslow": "Muito Lento"
 }
