--- a/locales/pt.json
+++ b/locales/pt.json
@@ -38,7 +38,6 @@
   "resolution": "Resolução",
   "readingInfo": "Lendo informações...",
   "errorReadingFile": "Erro na leitura",
-  "dragToReorder": "Arrastar para reordenar",
   "deleteFromQueue": "Excluir da fila",
   "statusCompleted": "Concluído",
   "statusError": "Erro na renderização. Clique para ver o log.",
@@ -47,14 +46,8 @@
   "confirmDeleteTitle": "Confirmar Exclusão",
   "confirmDeletePreset": "Tem certeza que deseja excluir esta predefinição? Esta ação não pode ser desfeita.",
   "errorTitle": "Erro",
-  "presetNameEmpty": "O nome da predefinição não pode estar vazio.",
   "importErrorTitle": "Erro na Importação",
-  "importErrorInvalidFile": "O arquivo selecionado não é um JSON de predefinições válido.",
-  "importCancelled": "Importação cancelada pelo usuário.",
-  "exportErrorTitle": "Erro na Exportação",
-  "exportError": "Ocorreu uma falha ao salvar o arquivo de predefinições.",
-  "exportCancelled": "Exportação cancelada pelo usuário.",
-  "updateAvailable": "Uma nova versão do W4ll-E está disponível e será baixada em segundo plano.",
+  "updateAvailable": "Uma nova versão do W4ll-E está disponível.",
   "updateReady": "A nova versão está pronta para ser instalada.",
   "restart": "Reiniciar Agora",
   "later": "Mais Tarde",
@@ -70,5 +63,12 @@
   "presetMedium": "Médio (Padrão)",
   "presetSlow": "Lento",
   "presetSlower": "Mais Lento",
-  "presetVeryslow": "Muito Lento"
+  "presetVeryslow": "Muito Lento",
+  "tabConverter": "Conversor",
+  "tabSuperLed": "Criador SUPERLED",
+  "superLedPanelLeft": "Painel Esquerdo (768x1152)",
+  "superLedPanelCenter": "Painel Central (2112x1152)",
+  "superLedPanelRight": "Painel Direito (768x1152)",
+  "superLedDropMessage": "Arraste 1 a 3 vídeos aqui",
+  "superLedCreate": "Criar SUPERLED"
 }
